# magi-ollama

./: Cargo.toml
src/: lib.rs
