[package]
name = "magi-ollama"
version = "0.1.0"
edition = "2021"
description = "MAGI ACP agent plugin for Ollama local LLM inference"

[lib]
crate-type = ["cdylib"]

[dependencies]
magi-pdk = { git = "https://github.com/shmor3/magi-pdk.git", features = ["guest"] }
extism-pdk = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
